# audio-feedback

./: .gitignore  README.md  distances.csv  distances.xlsx  main.py  pyproject.toml  requirements.txt
audio_feedback/: OADK_main.py  OADK_test.py  Yolo_test.py  analysis.py  base_conversion.py  base_conversion_test.py  base_conversion_validation.py  calc.py  camera_config.json  defs.py  feedback_augment.py  main.py  main_openal.py  multicamera.py  multicamera_test.py  realsense_thread.py  rotation_solver.py  simulation.py  test_main2.py  test_main3.py  test_system.py  utility.py  validation_config.json  yolo_thread.py
audio_feedback/analysis/: analysis.py
audio_feedback/camera/: OAKD.py  __init__.py  camera_thread.py  extrinsic_calc.py  intrinsic_calc.py  realsense.py
audio_feedback/graph/: graph.py  graph2.py
audio_feedback/main/: main.py  main_openal.py  main_server.py  test_main3.py  test_realsense.py  webcamera.py
audio_feedback/recognition/: __init__.py  color_recognition.py  recognition_thread.py
audio_feedback/templates/: index.html
audio_feedback/tones/: __init__.py  gen_sine_wav.py  sine_tone.py  sound_openal.py  sound_synthizer.py  tone.py
calibration/: extrinsic.json  intrinsic.json  test.json  test2.json  test3.json
simulation_logs/: best_scores.json
yolo_model/: ball.json  ball.xml  check_realsense_sync.py  data.yaml  test_center.py  test_center_v2.py  test_leftcamera.py  test_main.py  test_mult.py  test_multyolo.py  test_system.py  test_yolo.py  yolostudy.py
yolo_model/runs/detect/train/: args.yaml
yolo_model/runs/detect/train2/: args.yaml
yolo_model/runs/detect/train26/: args.yaml
yolo_model/runs/detect/train3/: args.yaml
yolo_model/runs/detect/train4/: args.yaml
yolo_model/runs/detect/train5/: args.yaml
yolo_model/runs/detect/train77/: args.yaml
yolo_model/test/: test_leftcamera.py  testziku.py
yolo_model/train/: labels.cache
yolo_model/valid/: labels.cache
