[tool.poetry]
name = "audio-feedback"
version = "0.1.0"
description = ""
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "~2.0"
opencv-contrib-python = "~4.10"
pysinewave = "~0.0"
python-openal = "~0.4"
scipy = "~1.14"
sounddevice = "~0.4"


[tool.poetry.group.dev.dependencies]
black = "^24"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
