[tool.poetry]
name = "audio-feedback"
version = "0.1.0"
description = ""
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.21,<2.0.0"
opencv-contrib-python = "~4.10"
pysinewave = "~0.0"
# python-openal = "~0.4"
scipy = "~1.14"
sounddevice = "~0.4"
flask = "^3.0.3"
synthizer = "^0.12.6"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
depthai-sdk = "^1.15.1"
pyrealsense2 = "^2.55.1.6486"
torch       = { version = "^2.7", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
torchvision = { version = "^0.22", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
ultralytics = "^8.3.221"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = ">=24,<27"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.cuda]
optional = true

# https://github.com/pytorch/pytorch/blob/main/RELEASE.md#release-compatibility-matrix
[tool.poetry.group.cuda.dependencies]
    torch       = { version = "^2.7", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
    torchvision = { version = "^0.22", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }

[tool.poetry.extras]
cpu  = ["torch", "torchvision"]
cuda = ["torch", "torchvision"]

[[tool.poetry.source]]
name     = "pytorch-cuda"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cu128"

[[tool.poetry.source]]
name     = "pytorch-cpu"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cpu"

